crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_ascii_synced.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 34)"
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ▜▒▟███▙▒▛  cohors  vX.Y.Z                         │  dir    (demo)                              │
│ ▟██▌█▐██▙  All your git repositories at a glance   │  config (demo)                              │
│ ▀▐▖▀█▀▗▌▀  status · fetch · pull · weekly standup  │  active 1h                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Attention ───────────────────────────────────────────────────────────────────────────────────────╮
│ All 1 repositories are up to date.                                                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Repositories (1) · sort: dirty-first ────────────────────────────────────────────────────────────╮
│    Repo           Sync  Changes  Stash  PRs    CI     Last  Status                               │
│▌   in-sync @main  ok    0        0      local  local    1h  up to date                           │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│ in-sync  ·  main ──────────────────────────────────────────────────────────── Enter: full detail │
│                                                                                                  │
│ Changes      clean                                                                               │
│ Stash        none                                                                                │
│ Upstream     even with origin/main                                                               │
│ Remote       no GitHub remote                                                                    │
│ Last commit  1h ago — chore: nothing to do                                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────── press h to hide hints ───────────────────────────────────────
╭───────────────────────────────╮ ╭──────────────────────────────╮ ╭───────────────────────────────╮
│            select             │ │        act  → in-sync        │ │             view              │
│ ───────────────────────────── │ │ ──────────────────────────── │ │ ───────────────────────────── │
│ a mark all    │ Esc clear     │ │ ⏎ open        │ P push       │ │ ↑/↓ move      │ ? help        │
│ / filter      │               │ │ f fetch       │ S stash      │ │ s sort        │ q quit        │
│ ───────────────────────────── │ │ p pull        │              │ │ ───────────────────────────── │
│ Space mark repo               │ │ ──────────────────────────── │ │ d dirty-only                  │
│                               │ │ ! run command                │ │ Tab standup                   │
╰───────────────────────────────╯ ╰──────────────────────────────╯ ╰───────────────────────────────╯
