crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_command_mode.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 22)"
---
╭ cohors vX.Y.Z ──────────────────────────────────────────────────────────────────────────────────╮
│ All your git repositories at a glance — status, fetch, pull & weekly standup.                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Attention (4 of 5 repositories) ─────────────────────────────────────────────────────────────────╮
│ 1 unpushed · 1 behind · 3 dirty · 1 stashed · 1 unreadable                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Repositorie╭ Command ───────────────────────────────────────────────────────────────╮────────────╮
│    Repo    │ : sort name▏                                                           │            │
│▌   legacy-b│ ────────────────────────────────────────────────────────────────────── │n denied)   │
│    payments│ :fetch :pull :push         │ sync the targets with their remotes       │            │
│    web-app │ :!<cmd>                    │ run any shell command across the targets  │            │
│    infra   │ :sort <name·dirty·recent>  │ change the sort order                     │            │
│    auth-ser│ :dirty   /<text>           │ dirty-only · fuzzy filter                 │            │
│            │ :jump <repo>               │ move the cursor to a repo                 │            │
│            │ :standup :refresh :quit    │ standup · rescan · exit                   │            │
│            ╰────────────────────────────────────────────────────────────────────────╯            │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⏎ run · Esc cancel                                                                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
