crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_command_mode_shell.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 22)"
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ▖▗    ▖▗  cohors  vX.Y.Z                                  │  dir    ~/projects (+1)             │
│   ▝██▘    All your git repositories at a glance            │  config ….config/cohors/config.toml │
│ ▘▝    ▘▝  status · fetch · pull · weekly standup           │  active 20m                         │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Attention (4 of 5 repositories) ─────────────────────────────────────────────────────────────────╮
│ 1 unpushed · 1 behind · 3 dirty · 1 stashed · 1 unreadable                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Repositorie╭ Shell command ─────────────────────────────────────────────────────────╮────────────╮
│    Repo    │ : !git checkout main▏                                                  │            │
│▌   legacy-b│ ────────────────────────────────────────────────────────────────────── │n denied)   │
│    payments│ ▌ :!<cmd>                  │ run any shell command across the targets  │            │
│    web-app ╰────────────────────────────────────────────────────────────────────────╯            │
│    infra             @a1b2c3d       —         4         1w  build: pin ci image                  │
│    auth-service      main           ● 1pr     ·         3d  chore: bump deps                     │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⏎ run · Esc cancel                                                                               │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
