crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_command_run_finished.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 22)"
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ▜▒▟███▙▒▛  cohors  vX.Y.Z                         │  dir    ~/projects (+1)                     │
│ ▟██▌╭ Run · cargo test ────────────────────────────────────────────────────────────────────╮     │
│ ▀▐▖▀│ ╭ Repos ─────────────────╮  ╭ web-app ──────────────────────────────────────────────╮│     │
╰─────│ │ ✓ payments             │  │ exit 1                                                ││─────╯
╭ Atte│ │ ✗ web-app 1            │  │                                                       ││─────╮
│ 1 un│ │                        │  │ running 3 tests                                       ││     │
╰─────│ │                        │  │ ── stderr ──                                          ││─────╯
╭ Repo│ │                        │  │ test cart::total failed                               ││─────╮
│    R│ │                        │  │ error: 1 test failed                                  ││     │
│▌   l│ │                        │  │                                                       ││ .gi…│
│    p│ │                        │  │                                                       ││     │
│    w│ │                        │  │                                                       ││ll   │
│     │ │                        │  │                                                       ││     │
╰─────│ │                        │  │                                                       ││─────╯
╭ lega│ │                        │  │                                                       ││tail ╮
│     │ │                        │  │                                                       ││     │
│ ⚠ co│ │                        │  │                                                       ││     │
╰─────│ ╰────────────────────────╯  ╰───────────────────────────────────────────────────────╯│─────╯
╭─────╰─────────────────────────────────────────────────────────────────────────── 1 ✓ · 1 ✗ ╯─────╮
│ ↑/↓ repo · PgUp/PgDn scroll output · y copy · Esc close                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
