crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_command_run_running.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 22)"
---
╭ cohors vX.Y.Z ───────────────────────────────────────────────────────5 repos · sort: dirty-first ╮
│ All your git repositories at a glance — status, fetch, pull & weekly standup.                    │
╰─────╭ Run · git status -s ─────────────────────────────────────────────────────────────────╮─────╯
╭ Atte│ ╭─ payments · ✓ ──────────────────────────────────────────────────────────────────── │─────╮
│ 4 of│    M src/lib.rs                                                                      │     │
│ 1 un│   ?? notes.txt                                                                       │     │
╰─────│                                                                                      │─────╯
╭ Repo│ ╭─ web-app · ⠋ ───────────────────────────────────────────────────────────────────── │─────╮
│  Rep│   running…                                                                           │     │
│     │                                                                                      │     │
│▌   l│ ╭─ auth-service · ⠋ ──────────────────────────────────────────────────────────────── │rmiss│
│    p│   running…                                                                           │     │
│    w│                                                                                      │     │
│    i│                                                                                      │e    │
│    a│                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     ╰─────────────────────────────────────────────────────────────── 1 ✓ · 0 ✗ · 2 running ╯     │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 ↑/↓ scroll · PgUp/PgDn · y copy · Esc close
