crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_confirm_stash.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 20)"
---
╭ cohors vX.Y.Z ──────────────────────────────────────────5 repos · 2 selected · sort: dirty-first ╮
│ All your git repositories at a glance — status, fetch, pull & weekly standup.                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Attention ───────────────────────────────────────────────────────────────────────────────────────╮
│ 4 of 5 repositories need attention:                                                              │
│ 1 unpushed · 1 behind · 3 dirty · 1 stashed · 1 unreadable                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Repositories (5) ────╭ Confirm ───────────────────────────────────────────╮──────────────────────╮
│  Repo                │ Stash changes in 2 repos?                          │ommit                 │
│                      │                                                    │                      │
│▌   legacy-billing    │ payments, web-app                                  │not read .git (permiss│
│  ● payments          │                                                    │ix: retry on 5xx      │
│  ● web-app           ╰────────────────────────────────────────────────────╯ip: cart drawer       │
│    infra             @a1b2c3d       —        4        ·      —        1w  build: pin ci image    │
│    auth-service      main           —        ·        ·      ● 1pr    3d  chore: bump deps       │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 y confirm · N / Esc cancel
