crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_demo_fleet.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 26)"
---
╭ cohors vX.Y.Z ─────────────────────────────────────────────────────12 repos · sort: dirty-first ╮
│ All your git repositories at a glance — status, fetch, pull & weekly standup.                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Attention ───────────────────────────────────────────────────────────────────────────────────────╮
│ 10 of 12 need attention:  4 unpushed (1 aging) · 3 behind · 6 dirty · 2 stashed · 1 unreadable   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Repositories (12) ───────────────────────────────────────────────────────────────────────────────╮
│    Repo              Branch         Sync         Changes  Last commit                            │
│                                                                                                  │
│▌   legacy-billing    error          ·            ·        could not read .git (permission denied)│
│    mobile-app        release/2.0    ↑4 ↓1 ● 3pr  4         9h  feat: biometric unlock            │
│    payments          main           ↑2 ● 2pr     3         2h  fix: retry charge on 5xx from proc│
│    analytics         main           ↑1 ●         · s2      4d  perf: precompute funnel rollups   │
│    design-system     main           ↑1 ● 1pr     · s1      6h  feat: dark-mode tokens            │
│    web-app           feat/checkout  ↓5 ● 1pr     7        20m  wip: cart drawer animation        │
│    data-pipeline     main           ↓3 ●         ·         5h  fix: backfill job off-by-one windo│
│    experiments       @9f8e7d6       —            7         1y  spike: try wgpu for the renderer  │
│    infra             @a1b2c3d       —            4         1w  build: pin terraform provider vers│
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────── press h to hide hints ───────────────────────────────────────
╭ select ───────────────────────╮ ╭ act ─────────────────────────╮ ╭ view ─────────────────────────╮
│Space mark repo                │ │⏎ open          ! run command │ │↑/↓ move        Tab standup    │
│a mark all                     │ │f fetch         S stash       │ │s sort          ? help         │
│/ filter                       │ │p pull                        │ │d dirty-only    q quit         │
│Esc clear                      │ │                              │ │                               │
╰───────────────────────────────╯ ╰──────────── → legacy-billing ╯ ╰───────────────────────────────╯
