crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_detail.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 28)"
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ▜▒▟███▙▒▛  cohors  vX.Y.Z                          │  dir    ~/projects (+1)                     │
│ ▟██▌█▐██▙  All your git repositories at a glance   │  config ….config/cohors/config.toml         │
│ ▀▐▖▀█▀▗▌╭ payments  ·  main ───────────────────────────────────────────────────────────╮         │
╰─────────│ Recent commits (5)                                                           │─────────╯
╭ Attentio│ a1b2c3d    2h  fix: retry charge on 5xx from processor                       │─────────╮
│ 1 unpush│ b2c3d4e    5h  test: cover partial-refund path                               │         │
╰─────────│ c3d4e5f    1d  refactor: extract processor client                            │─────────╯
╭ Reposito│ d4e5f60    3d  feat: idempotency keys on charge                              │─────────╮
│    Repo │ e5f6071    4d  chore: bump stripe sdk to 12.1                                │         │
│▌   legac│                                                                              │enied)   │
│    payme│ Changes (3)                                                                  │         │
│    web-a│  M src/charge.rs                                                             │         │
│    infra│  M src/refund.rs                                                             │         │
│    auth-│ ?? notes.md                                                                  │         │
│         │                                                                              │         │
│         │ Branches (3)                                                                 │         │
│         │ ● main                                                                       │         │
│         │   feat/idempotency                                                           │         │
│         │   spike/webhooks                                                             │         │
│         │                                                                              │         │
│         │ Stashes (1)                                                                  │         │
│         │ WIP on main: dashboard tweaks                                                │         │
│         │                                                                              │         │
╰─────────╰──────────────────────────────────────────────────────────────────────────────╯─────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ↑/↓ scroll · g/G top / bottom · Esc close                                                        │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
