crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_detail_with_remote.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 28)"
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ▜▒▟███▙▒▛  cohors  vX.Y.Z                         │  dir    ~/projects (+1)                     │
│ ▟██▌█▐╭ payments  ·  main ───────────────────────────────────────────────────────────────╮       │
│ ▀▐▖▀█▀│ ╭ Changes · branches · PRs ────────────╮ ╭ Commits (5) ─────────────────────────╮│       │
╰───────│ │ Changes (3)                        █ │ │ a1b2c3d    2h  fix: retry charge on  ││───────╯
╭ Attent│ │  M src/charge.rs                   █ │ │ b2c3d4e    5h  test: cover partial-r ││───────╮
│ 1 unpu│ │  M src/refund.rs                   █ │ │ c3d4e5f    1d  refactor: extract pro ││       │
╰───────│ │ ?? notes.md                        █ │ │ d4e5f60    3d  feat: idempotency key ││───────╯
╭ Reposi│ │                                    █ │ │ e5f6071    4d  chore: bump stripe sd ││───────╮
│    Rep│ │ Branches (3)                       █ │ │                                      ││       │
│▌   leg│ │ ● main                             █ │ │                                      ││ad .gi…│
│    pay│ │   feat/idempotency                 █ │ │                                      ││       │
│    web│ │   spike/webhooks                   █ │ │                                      ││pull   │
│       │ │                                    █ │ │                                      ││       │
╰───────│ │ Stashes (1)                        ║ │ │                                      ││───────╯
╭ legacy│ │ WIP on main: dashboard tweaks      ║ │ │                                      ││detail ╮
│ ⚠ coul│ │                                    ║ │ │                                      ││       │
│       │ │ GitHub                             ║ │ │                                      ││       │
│       │ │ 7 open issues  ·  latest v1.4.0    ║ │ │                                      ││       │
│       │ │                                    ║ │ │                                      ││       │
│       │ │ Pull requests (2)                  ║ │ │                                      ││       │
│       │ │ #142 fix: retry charge on 5xx  @may║ │ │                                      ││       │
│       │ │ #147 wip: webhook signatures  @sam ║ │ │                                      ││       │
│       │ │                                    ║ │ │                                      ││       │
╰───────│ ╰──────────────────────────────────────╯ ╰──────────────────────────────────────╯│───────╯
╭───────╰──────────────────────────────────────────────────────────────────────────────────╯───────╮
│ ↑/↓ scroll · g/G top / bottom · Esc close                                                        │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
