crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_dirty_only.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 20)"
---
╭ cohors vX.Y.Z ───────────────────────────────────────3/5 repos · sort: dirty-first · dirty-only ╮
│ All your git repositories at a glance — status, fetch, pull & weekly standup.                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Attention ───────────────────────────────────────────────────────────────────────────────────────╮
│ 4 of 5 repositories need attention:                                                              │
│ 1 unpushed · 1 behind · 3 dirty · 1 stashed · 1 unreadable                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Repositories (3) ────────────────────────────────────────────────────────────────────────────────╮
│    Repo              Branch         Sync      Changes  Last commit                               │
│                                                                                                  │
│▌   payments          main           ↑2 ● 2pr  4 s1      2h  fix: retry on 5xx                    │
│    web-app           feat/checkout  ↓5 ●      7        20m  wip: cart drawer                     │
│    infra             @a1b2c3d       —         4         1w  build: pin ci image                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ select Space mark repo · a mark all · / filter · Esc clear                                       │
│ act    ⏎ open · f fetch · p pull · ! run command · S stash                                       │
│ view   ↑/↓ move · Tab standup · ? help · q quit                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
