crates/cohors-tui/src/snapshots/cohors__ui__tests__snapshot_dock_action.snap
---
source: crates/cohors-tui/src/ui.rs
expression: "render_to_string(&app, 100, 34)"
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ▜▒▟███▙▒▛  cohors  vX.Y.Z                         │  dir    ~/projects (+1)                     │
│ ▟██▌█▐██▙  All your git repositories at a glance   │  config ….config/cohors/config.toml         │
│ ▀▐▖▀█▀▗▌▀  status · fetch · pull · weekly standup  │  active 20m                                 │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Attention (4 of 5 repositories) ─────────────────────────────────────────────────────────────────╮
│ 1 unpushed · 1 behind · 3 dirty · 1 stashed · 1 unreadable                                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Repositories (5) · sort: dirty-first ────────────────────────────────────────────────────────────╮
│    Repo              Branch         Sync      Changes  Last  Why                                 │
│▌   legacy-billing    error          ·         ·        ·     could not read .git (permission den…│
│    payments          main           ↑2 ● 2pr  4 s1       2h  ↑2 unpushed                         │
│    web-app           feat/checkout  ⠋         7         20m  ↓5 behind — pull                    │
│    infra             @a1b2c3d       —         4          1w  4 uncommitted changes               │
│    auth-service      main           ⠋         ·          3d  ·                                   │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Working — 2 repo(s) ─────────────────────────────────────────────────────────────────────────────╮
│ ⠋ web-app                                                                                        │
│ ⠋ auth-service                                                                                   │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────── press h to hide hints ───────────────────────────────────────
╭ select ───────────────────────╮ ╭ act ─────────────────────────╮ ╭ view ─────────────────────────╮
│ a mark all    │ Esc clear     │ │ ⏎ open        │ P push       │ │ ↑/↓ move      │ ? help        │
│ / filter      │               │ │ f fetch       │ S stash      │ │ s sort        │ q quit        │
│ ───────────────────────────── │ │ p pull        │              │ │ ───────────────────────────── │
│ Space mark repo               │ │ ──────────────────────────── │ │ d dirty-only                  │
│                               │ │ ! run command                │ │ Tab standup                   │
╰───────────────────────────────╯ ╰──────────── → legacy-billing ╯ ╰───────────────────────────────╯
